syntax = "proto3";


option java_package = "com.watchtogether.grpc";
option java_outer_classname = "AuthServiceProto";

service AuthService {

  rpc RegisterUser (RegisterRequestGrpc) returns (RegisterResponseGrpc);

  rpc Login (LoginRequestGrpc) returns (AuthenticateResponseGrpc);

  rpc ValidateOtp (VerificationRequestGrpc) returns (AuthenticateResponseGrpc);

  rpc ValidateJwtToken (ValidateTokenRequestGrpc) returns (ValidateTokenResponseGrpc);

  rpc UpdateLogin (UpdateLoginRequestGrpc) returns (UpdateCredResponseGrpc);

  rpc UpdateEmail (UpdateLoginRequestGrpc) returns (UpdateCredResponseGrpc);

  rpc UpdatePassword (UpdatePasswordRequestGrpc) returns (UpdateCredResponseGrpc);

  rpc SendEmailVerificationCode (AuthUserIdRequestGrpc) returns (VerifyEmailResponseGrpc); //TODO: проблема имен (завтра отрефакторить жестко)

  rpc VerifyEmailCode (VerifyEmailRequestGrpc) returns (VerifyEmailResponseGrpc);

  rpc GetUser (AuthUserIdRequestGrpc) returns (UserCredResponseGrpc);

  rpc EnableTwoFactor (AuthUserIdRequestGrpc) returns (EnableTwoFactorResponseGrpc);

}

message RegisterRequestGrpc {
  string login = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponseGrpc {
  bool success = 1;
  string message = 2;
}

message LoginRequestGrpc {
  string identifier = 1; // Может быть логином или email
  string password = 2;
}

message VerificationRequestGrpc {
  string email = 1;
  string code = 2;
}

message AuthenticateResponseGrpc {
  oneof response_type {
    string token = 1;
    bool two_factor_required = 2;
  }
}

message ValidateTokenRequestGrpc {
  string token = 1;
}

message ValidateTokenResponseGrpc {
  bool is_valid = 1;
}

message UpdateLoginRequestGrpc {
  string userId = 1;
  string login = 2;
}

message UpdatePasswordRequestGrpc {
  string userId = 1;
  string oldPass = 2;
  string newPass = 3;
}

message UpdateCredResponseGrpc {
  string message = 1;
}

message AuthUserIdRequestGrpc {
  string userId = 1;
}

message VerifyEmailRequestGrpc {
  string userId = 1;
  string code = 2;
}

message VerifyEmailResponseGrpc {
  bool result = 1;
}

message UserCredResponseGrpc {
  string login = 1;
  string email = 2;
  bool emailVerified = 3;
  bool enabled = 4;
  string createdAt = 5;
}

message EnableTwoFactorResponseGrpc {
  bool result = 1;
  string message = 2;
}